name:                hlm
version:             0.0.0.0
build-type:          Simple
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:     Types, Vector, Exceptions, Extras.Pythagorean
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010

executable hlm_example
  main-is:             main.hs
  hs-source-dirs:      examples
  build-depends:       base >=4.7 && <5, hlm
  default-language:    Haskell2010
